Fixing layout Issues

--- a/frontend-project/src/styles/Info.css
+++ b/frontend-project/src/styles/Info.css
@@ -71,27 +71,48 @@ p {
   padding-bottom: 100px;
 }
 
-@media (min-width: 580px) and (max-width: 769px) {
-  .container {
-    width: 100%;
-    margin: 0;
+
+@media (max-width: 414px) {
+  
+
+  .box1 {
+    justify-content: space-evenly;
+    font-size: 14px;
+    max-width: 100%;
   }
-  p {
+  .box1 img {
+    width: 100px;
+    height: 110px;
+    
+  }
+  .Box1a p{
+    width: 100%;
+    display: block;
+  }
+  .chart-container canvas{
+    width: 100px;
+    height: 120px;
+    justify-content: space-between;
+  }
+
+}
+
+@media (max-width: 768px) {
+
+  .box1 p{
     width: 100%;
   }
 
   .box1 {
-    display: inline-block;
+    
     justify-content: space-evenly;
-    margin: 0;
     font-size: 15px;
-    width: 100%;
+    max-width: 100%;
   }
   img {
-    width: 130px;
-    margin-left: 170px;
-    justify-content: center;
+    width: 130px;    
     height: 170px;
+    margin-left: 50%;
   }
 
   .box2 {
@@ -99,4 +120,26 @@ p {
     width: 100%;
     justify-content: space-between;
   }
+  
+  .Box1a p{
+    width: 100%;
+    display: block;
+  }
+
+}
+@media (max-width: 1024px) {
+
+  .box1 {
+    justify-content: space-evenly;
+    font-size: 15px;
+    max-width: 100%;
+  }
+  .box1 p{
+    max-width: 100%;
+  }
+  .Box1a p{
+    width: 100%;
+    display: block;
+  }
+  
 }
